--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ldapts",
-  "version": "2.4.0",
+  "version": "2.5.0",
   "description": "LDAP client",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "mocha -r ts-node/register tests/*.tests.ts tests/**/*.tests.ts",
+    "test": "mocha \"tests/**/*.tests.ts\"",
     "lint": "eslint --fix --ext .ts src tests",
     "dist": "if [ -d \"src\" ]; then rm -rf dist && npm run lint && npm run build && npm run test && cp package.json dist && cp *.md dist && cp .npmignore dist && cd dist && npm publish; fi",
     "prepublishOnly": "if [ -d \"src\" ]; then echo \"Please use: npm run dist\" && exit 125; fi"
@@ -44,8 +44,8 @@
   "homepage": "https://github.com/ldapts/ldapts#readme",
   "dependencies": {
     "@types/asn1": "~0.2.0",
-    "@types/node": "~10.17.19",
-    "@types/uuid": "~7.0.2",
+    "@types/node": "~14.0.3",
+    "@types/uuid": "~8.0.0",
     "asn1": "~0.2.4",
     "debug": "~4.1.1",
     "strict-event-emitter-types": "~2.0.0",
