--- a/package.json
+++ b/package.json
@@ -64,12 +64,15 @@
     "eslint-config-airbnb-base": "~14.2.0",
     "eslint-plugin-import": "~2.22.0",
     "eslint-plugin-jsdoc": "~30.3.2",
+    "eslint-config-prettier": "~6.12.0",
     "eslint-plugin-mocha": "~8.0.0",
+    "eslint-plugin-prettier": "~3.1.4",
     "eslint-plugin-promise": "~4.2.1",
     "eslint-plugin-security": "~1.4.0",
     "husky": "~3.1.0",
     "lint-staged": "~10.3.0",
     "mocha": "~8.1.3",
+    "prettier": "~2.1.2",
     "ts-mockito": "~2.6.1",
     "ts-node": "~9.0.0",
     "typescript": "~4.0.2"
