--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "test": "mocha \"tests/**/*.tests.ts\"",
     "lint": "eslint --fix --ext .ts src tests",
     "dist": "if [ -d \"src\" ]; then rm -rf dist && npm run lint && npm run build && npm run test && cp package.json dist && cp *.md dist && cp .npmignore dist && cd dist && npm publish; fi",
-    "prepublishOnly": "if [ -d \"src\" ]; then echo \"Please use: npm run dist\" && exit 125; fi"
+    "prepublishOnly": "if [ -d \"src\" ]; then echo \"Please use: npm run dist\" && exit 125; fi && pinst --disable",
+    "postinstall": "husky install",
+    "postpublish": "pinst --enable"
   },
   "lint-staged": {
     "*.js": [
@@ -18,11 +20,6 @@
     "*.ts": [
       "eslint --fix"
     ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
   },
   "repository": {
     "type": "git",
@@ -44,37 +41,41 @@
   "homepage": "https://github.com/ldapts/ldapts#readme",
   "dependencies": {
     "@types/asn1": "~0.2.0",
-    "@types/node": "~14.6.4",
+    "@types/node": "~14.11.8",
     "@types/uuid": "~8.3.0",
     "asn1": "~0.2.4",
-    "debug": "~4.1.1",
+    "debug": "~4.2.0",
     "strict-event-emitter-types": "~2.0.0",
-    "uuid": "~8.3.0"
+    "uuid": "~8.3.1"
   },
   "devDependencies": {
-    "@types/chai": "~4.2.12",
+    "@types/chai": "~4.2.13",
     "@types/chai-as-promised": "~7.1.3",
     "@types/debug": "~4.1.5",
     "@types/mocha": "~8.0.3",
-    "@typescript-eslint/eslint-plugin": "~4.0.1",
-    "@typescript-eslint/parser": "~4.0.1",
+    "@types/sinon": "~9.0.8",
+    "@typescript-eslint/eslint-plugin": "~4.4.1",
+    "@typescript-eslint/parser": "~4.4.1",
     "chai": "~4.2.0",
     "chai-as-promised": "~7.1.1",
-    "eslint": "~7.8.1",
+    "eslint": "~7.11.0",
     "eslint-config-airbnb-base": "~14.2.0",
-    "eslint-plugin-import": "~2.22.0",
-    "eslint-plugin-jsdoc": "~30.3.2",
+    "eslint-config-airbnb-typescript": "~11.0.0",
     "eslint-config-prettier": "~6.12.0",
+    "eslint-plugin-import": "~2.22.1",
+    "eslint-plugin-jsdoc": "~30.6.5",
     "eslint-plugin-mocha": "~8.0.0",
     "eslint-plugin-prettier": "~3.1.4",
     "eslint-plugin-promise": "~4.2.1",
     "eslint-plugin-security": "~1.4.0",
-    "husky": "~3.1.0",
-    "lint-staged": "~10.3.0",
+    "husky": "~5.0.0-alpha.6",
+    "lint-staged": "~10.4.0",
     "mocha": "~8.1.3",
+    "pinst": "~2.0.0",
     "prettier": "~2.1.2",
+    "sinon": "~9.2.0",
     "ts-mockito": "~2.6.1",
     "ts-node": "~9.0.0",
-    "typescript": "~4.0.2"
+    "typescript": "~4.0.3"
   }
 }
