--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ldapts",
-  "version": "2.8.1",
+  "version": "2.9.0",
   "description": "LDAP client",
   "main": "index.js",
   "types": "index.d.ts",
@@ -41,7 +41,7 @@
   "homepage": "https://github.com/ldapts/ldapts#readme",
   "dependencies": {
     "@types/asn1": "~0.2.0",
-    "@types/node": "~14.11.8",
+    "@types/node": "~14.14.7",
     "@types/uuid": "~8.3.0",
     "asn1": "~0.2.4",
     "debug": "~4.2.0",
@@ -49,33 +49,33 @@
     "uuid": "~8.3.1"
   },
   "devDependencies": {
-    "@types/chai": "~4.2.13",
+    "@types/chai": "~4.2.14",
     "@types/chai-as-promised": "~7.1.3",
     "@types/debug": "~4.1.5",
     "@types/mocha": "~8.0.3",
     "@types/sinon": "~9.0.8",
-    "@typescript-eslint/eslint-plugin": "~4.4.1",
-    "@typescript-eslint/parser": "~4.4.1",
+    "@typescript-eslint/eslint-plugin": "~4.7.0",
+    "@typescript-eslint/parser": "~4.7.0",
     "chai": "~4.2.0",
     "chai-as-promised": "~7.1.1",
-    "eslint": "~7.11.0",
-    "eslint-config-airbnb-base": "~14.2.0",
-    "eslint-config-airbnb-typescript": "~11.0.0",
-    "eslint-config-prettier": "~6.12.0",
+    "eslint": "~7.13.0",
+    "eslint-config-airbnb-base": "~14.2.1",
+    "eslint-config-airbnb-typescript": "~12.0.0",
+    "eslint-config-prettier": "~6.15.0",
     "eslint-plugin-import": "~2.22.1",
-    "eslint-plugin-jsdoc": "~30.6.5",
+    "eslint-plugin-jsdoc": "~30.7.7",
     "eslint-plugin-mocha": "~8.0.0",
     "eslint-plugin-prettier": "~3.1.4",
     "eslint-plugin-promise": "~4.2.1",
     "eslint-plugin-security": "~1.4.0",
-    "husky": "~5.0.0-alpha.6",
-    "lint-staged": "~10.4.0",
-    "mocha": "~8.1.3",
+    "husky": "~5.0.0-beta.0",
+    "lint-staged": "~10.5.1",
+    "mocha": "~8.2.1",
     "pinst": "~2.0.0",
     "prettier": "~2.1.2",
-    "sinon": "~9.2.0",
+    "sinon": "~9.2.1",
     "ts-mockito": "~2.6.1",
     "ts-node": "~9.0.0",
-    "typescript": "~4.0.3"
+    "typescript": "~4.0.5"
   }
 }
