--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ldapts",
-  "version": "2.10.0",
+  "version": "2.10.1",
   "description": "LDAP client",
   "main": "index.js",
   "types": "index.d.ts",
@@ -41,10 +41,10 @@
   "homepage": "https://github.com/ldapts/ldapts#readme",
   "dependencies": {
     "@types/asn1": "~0.2.0",
-    "@types/node": "~14.14.7",
+    "@types/node": "~14.14.10",
     "@types/uuid": "~8.3.0",
     "asn1": "~0.2.4",
-    "debug": "~4.2.0",
+    "debug": "~4.3.1",
     "strict-event-emitter-types": "~2.0.0",
     "uuid": "~8.3.1"
   },
@@ -52,30 +52,30 @@
     "@types/chai": "~4.2.14",
     "@types/chai-as-promised": "~7.1.3",
     "@types/debug": "~4.1.5",
-    "@types/mocha": "~8.0.3",
-    "@types/sinon": "~9.0.8",
-    "@typescript-eslint/eslint-plugin": "~4.7.0",
-    "@typescript-eslint/parser": "~4.7.0",
+    "@types/mocha": "~8.0.4",
+    "@types/sinon": "~9.0.9",
+    "@typescript-eslint/eslint-plugin": "~4.9.0",
+    "@typescript-eslint/parser": "~4.9.0",
     "chai": "~4.2.0",
     "chai-as-promised": "~7.1.1",
-    "eslint": "~7.13.0",
+    "eslint": "~7.14.0",
     "eslint-config-airbnb-base": "~14.2.1",
     "eslint-config-airbnb-typescript": "~12.0.0",
     "eslint-config-prettier": "~6.15.0",
     "eslint-plugin-import": "~2.22.1",
-    "eslint-plugin-jsdoc": "~30.7.7",
+    "eslint-plugin-jsdoc": "~30.7.8",
     "eslint-plugin-mocha": "~8.0.0",
     "eslint-plugin-prettier": "~3.1.4",
     "eslint-plugin-promise": "~4.2.1",
     "eslint-plugin-security": "~1.4.0",
-    "husky": "~5.0.0-beta.0",
-    "lint-staged": "~10.5.1",
+    "husky": "~5.0.4",
+    "lint-staged": "~10.5.2",
     "mocha": "~8.2.1",
-    "pinst": "~2.0.0",
-    "prettier": "~2.1.2",
+    "pinst": "~2.1.1",
+    "prettier": "~2.2.1",
     "sinon": "~9.2.1",
     "ts-mockito": "~2.6.1",
     "ts-node": "~9.0.0",
-    "typescript": "~4.0.5"
+    "typescript": "~4.1.2"
   }
 }
