--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ldapts",
-  "version": "2.11.0",
+  "version": "2.11.1",
   "description": "LDAP client",
   "main": "index.js",
   "types": "index.d.ts",
@@ -8,6 +8,7 @@
     "build": "tsc",
     "test": "mocha \"tests/**/*.tests.ts\"",
     "lint": "eslint --fix --ext .ts src tests",
+    "lint-staged": "lint-staged",
     "dist": "if [ -d \"src\" ]; then rm -rf dist && npm run lint && npm run build && npm run test && cp package.json dist && cp *.md dist && cp .npmignore dist && cd dist && npm publish; fi",
     "prepublishOnly": "if [ -d \"src\" ]; then echo \"Please use: npm run dist\" && exit 125; fi && pinst --disable",
     "postinstall": "husky install",
@@ -41,7 +42,7 @@
   "homepage": "https://github.com/ldapts/ldapts#readme",
   "dependencies": {
     "@types/asn1": "~0.2.0",
-    "@types/node": "~14.14.20",
+    "@types/node": "~14.14.31",
     "@types/uuid": "~8.3.0",
     "asn1": "~0.2.4",
     "debug": "~4.3.1",
@@ -49,33 +50,33 @@
     "uuid": "~8.3.2"
   },
   "devDependencies": {
-    "@types/chai": "~4.2.14",
+    "@types/chai": "~4.2.15",
     "@types/chai-as-promised": "~7.1.3",
     "@types/debug": "~4.1.5",
-    "@types/mocha": "~8.2.0",
+    "@types/mocha": "~8.2.1",
     "@types/sinon": "~9.0.10",
-    "@typescript-eslint/eslint-plugin": "~4.13.0",
-    "@typescript-eslint/parser": "~4.13.0",
-    "chai": "~4.2.0",
+    "@typescript-eslint/eslint-plugin": "~4.15.2",
+    "@typescript-eslint/parser": "~4.15.2",
+    "chai": "~4.3.0",
     "chai-as-promised": "~7.1.1",
-    "eslint": "~7.17.0",
+    "eslint": "~7.20.0",
     "eslint-config-airbnb-base": "~14.2.1",
-    "eslint-config-airbnb-typescript": "~12.0.0",
-    "eslint-config-prettier": "~7.1.0",
+    "eslint-config-airbnb-typescript": "~12.3.1",
+    "eslint-config-prettier": "~8.1.0",
     "eslint-plugin-import": "~2.22.1",
-    "eslint-plugin-jsdoc": "~31.0.3",
+    "eslint-plugin-jsdoc": "~32.2.0",
     "eslint-plugin-mocha": "~8.0.0",
     "eslint-plugin-prettier": "~3.3.1",
-    "eslint-plugin-promise": "~4.2.1",
+    "eslint-plugin-promise": "~4.3.1",
     "eslint-plugin-security": "~1.4.0",
-    "husky": "~5.0.6",
-    "lint-staged": "~10.5.3",
-    "mocha": "~8.2.1",
-    "pinst": "~2.1.1",
+    "husky": "~5.1.1",
+    "lint-staged": "~10.5.4",
+    "mocha": "~8.3.0",
+    "pinst": "~2.1.6",
     "prettier": "~2.2.1",
-    "sinon": "~9.2.3",
+    "sinon": "~9.2.4",
     "ts-mockito": "~2.6.1",
     "ts-node": "~9.1.1",
-    "typescript": "~4.1.3"
+    "typescript": "~4.2.2"
   }
 }
