--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ldapts",
-  "version": "2.12.0",
+  "version": "3.0.0",
   "description": "LDAP client",
   "main": "index.js",
   "types": "index.d.ts",
@@ -9,7 +9,7 @@
     "test": "mocha \"tests/**/*.tests.ts\"",
     "lint": "eslint --fix --ext .ts src tests",
     "lint-staged": "lint-staged",
-    "dist": "if [ -d \"src\" ]; then rm -rf dist && npm run lint && npm run build && npm run test && cp package.json dist && cp *.md dist && cp .npmignore dist && cd dist && npm publish; fi",
+    "dist": "if [ -d \"src\" ]; then rm -rf dist && npm run lint && npm run build && npm run test && cp package.json dist && cp package-lock.json dist && cp *.md dist && cp .npmignore dist && cd dist && npm publish; fi",
     "prepublishOnly": "if [ -d \"src\" ]; then echo \"Please use: npm run dist\" && exit 125; fi && pinst --disable",
     "postinstall": "husky install",
     "postpublish": "pinst --enable"
@@ -27,7 +27,7 @@
     "url": "git+https://github.com/ldapts/ldapts.git"
   },
   "engines": {
-    "node": ">=10"
+    "node": ">=12"
   },
   "keywords": [
     "ldap",
@@ -42,7 +42,7 @@
   "homepage": "https://github.com/ldapts/ldapts#readme",
   "dependencies": {
     "@types/asn1": "~0.2.0",
-    "@types/node": "~14.14.37",
+    "@types/node": "^14.14.45",
     "@types/uuid": "~8.3.0",
     "asn1": "~0.2.4",
     "debug": "~4.3.1",
@@ -50,33 +50,33 @@
     "uuid": "~8.3.2"
   },
   "devDependencies": {
-    "@types/chai": "~4.2.15",
-    "@types/chai-as-promised": "~7.1.3",
+    "@types/chai": "~4.2.18",
+    "@types/chai-as-promised": "~7.1.4",
     "@types/debug": "~4.1.5",
     "@types/mocha": "~8.2.2",
-    "@types/sinon": "~9.0.11",
-    "@typescript-eslint/eslint-plugin": "~4.20.0",
-    "@typescript-eslint/parser": "~4.20.0",
+    "@types/sinon": "~10.0.0",
+    "@typescript-eslint/eslint-plugin": "~4.23.0",
+    "@typescript-eslint/parser": "~4.23.0",
     "chai": "~4.3.4",
     "chai-as-promised": "~7.1.1",
-    "eslint": "~7.23.0",
+    "eslint": "~7.26.0",
     "eslint-config-airbnb-base": "~14.2.1",
     "eslint-config-airbnb-typescript": "~12.3.1",
-    "eslint-config-prettier": "~8.1.0",
+    "eslint-config-prettier": "~8.3.0",
     "eslint-plugin-import": "~2.22.1",
-    "eslint-plugin-jsdoc": "~32.3.0",
+    "eslint-plugin-jsdoc": "~34.0.2",
     "eslint-plugin-mocha": "~8.1.0",
-    "eslint-plugin-prettier": "~3.3.1",
-    "eslint-plugin-promise": "~4.3.1",
+    "eslint-plugin-prettier": "~3.4.0",
+    "eslint-plugin-promise": "~5.1.0",
     "eslint-plugin-security": "~1.4.0",
     "husky": "~6.0.0",
-    "lint-staged": "~10.5.4",
-    "mocha": "~8.3.2",
+    "lint-staged": "~11.0.0",
+    "mocha": "~8.4.0",
     "pinst": "~2.1.6",
-    "prettier": "~2.2.1",
+    "prettier": "~2.3.0",
     "sinon": "~10.0.0",
     "ts-mockito": "~2.6.1",
     "ts-node": "~9.1.1",
-    "typescript": "~4.2.3"
+    "typescript": "~4.2.4"
   }
 }
