fix source map path

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
 
     "declaration": true,
     "sourceMap": true,
+    "mapRoot": ".",
 
     "strict": true,
     "forceConsistentCasingInFileNames": true,
