--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
 
     "declaration": true,
     "sourceMap": true,
-    "mapRoot": ".",
+    "sourceRoot": ".",
 
     "strict": true,
     "forceConsistentCasingInFileNames": true,
