--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ldapts",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "LDAP client",
   "main": "index.js",
   "types": "index.d.ts",
@@ -18,6 +18,7 @@
   },
   "lint-staged": {
     "*.md": [
+      "prettier --write",
       "markdownlint --config=.github/linters/.markdown-lint.yml --fix"
     ],
     "*.js": [
@@ -47,7 +48,7 @@
   "homepage": "https://github.com/ldapts/ldapts#readme",
   "dependencies": {
     "@types/asn1": "~0.2.0",
-    "@types/node": "^16.9.1",
+    "@types/node": "^16.11.6",
     "@types/uuid": "~8.3.1",
     "asn1": "~0.2.4",
     "debug": "~4.3.2",
@@ -55,35 +56,35 @@
     "uuid": "~8.3.2"
   },
   "devDependencies": {
-    "@types/chai": "~4.2.21",
+    "@types/chai": "~4.2.22",
     "@types/chai-as-promised": "~7.1.4",
     "@types/debug": "~4.1.7",
     "@types/mocha": "~9.0.0",
-    "@types/sinon": "~10.0.2",
-    "@typescript-eslint/eslint-plugin": "~4.31.1",
-    "@typescript-eslint/parser": "~4.31.1",
+    "@types/sinon": "~10.0.6",
+    "@typescript-eslint/eslint-plugin": "~5.2.0",
+    "@typescript-eslint/parser": "~5.2.0",
     "chai": "~4.3.4",
     "chai-as-promised": "~7.1.1",
-    "eslint": "~7.32.0",
+    "eslint": "~8.1.0",
     "eslint-config-airbnb-base": "~14.2.1",
-    "eslint-config-airbnb-typescript": "~14.0.0",
+    "eslint-config-airbnb-typescript": "~14.0.1",
     "eslint-config-prettier": "~8.3.0",
-    "eslint-plugin-import": "~2.24.2",
-    "eslint-plugin-jsdoc": "~36.1.0",
+    "eslint-plugin-import": "~2.25.2",
+    "eslint-plugin-jsdoc": "~37.0.3",
     "eslint-plugin-mocha": "~9.0.0",
     "eslint-plugin-prettier": "~4.0.0",
-    "eslint-plugin-promise": "~5.1.0",
+    "eslint-plugin-promise": "~5.1.1",
     "eslint-plugin-security": "~1.4.0",
-    "husky": "~7.0.2",
-    "lint-staged": "~11.1.2",
-    "markdownlint-cli": "~0.28.1",
-    "mocha": "~9.1.1",
+    "husky": "~7.0.4",
+    "lint-staged": "~11.2.6",
+    "markdownlint-cli": "~0.29.0",
+    "mocha": "~9.1.3",
     "npm-run-all": "~4.1.5",
     "pinst": "~2.1.6",
-    "prettier": "~2.4.0",
+    "prettier": "~2.4.1",
     "sinon": "~11.1.2",
     "ts-mockito": "~2.6.1",
-    "ts-node": "~10.2.1",
-    "typescript": "~4.4.3"
+    "ts-node": "~10.4.0",
+    "typescript": "~4.4.4"
   }
 }
