--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ldapts",
-  "version": "3.2.0",
+  "version": "3.2.1",
   "description": "LDAP client",
   "main": "index.js",
   "types": "index.d.ts",
@@ -47,9 +47,9 @@
   },
   "homepage": "https://github.com/ldapts/ldapts#readme",
   "dependencies": {
-    "@types/asn1": "~0.2.0",
-    "@types/node": "^17.0.2",
-    "@types/uuid": "~8.3.3",
+    "@types/asn1": ">= 0.2.0",
+    "@types/node": ">= 12.13",
+    "@types/uuid": ">= 8",
     "asn1": "~0.2.6",
     "debug": "~4.3.3",
     "strict-event-emitter-types": "~2.0.0",
@@ -61,8 +61,8 @@
     "@types/debug": "~4.1.7",
     "@types/mocha": "~9.0.0",
     "@types/sinon": "~10.0.6",
-    "@typescript-eslint/eslint-plugin": "~5.8.0",
-    "@typescript-eslint/parser": "~5.8.0",
+    "@typescript-eslint/eslint-plugin": "~5.8.1",
+    "@typescript-eslint/parser": "~5.8.1",
     "chai": "~4.3.4",
     "chai-as-promised": "~7.1.1",
     "eslint": "~8.5.0",
@@ -70,13 +70,13 @@
     "eslint-config-airbnb-typescript": "~16.1.0",
     "eslint-config-prettier": "~8.3.0",
     "eslint-plugin-import": "~2.25.3",
-    "eslint-plugin-jsdoc": "~37.4.0",
+    "eslint-plugin-jsdoc": "~37.4.2",
     "eslint-plugin-mocha": "~10.0.3",
     "eslint-plugin-prettier": "~4.0.0",
     "eslint-plugin-promise": "~6.0.0",
     "eslint-plugin-security": "~1.4.0",
     "husky": "~7.0.4",
-    "lint-staged": "~12.1.3",
+    "lint-staged": "~12.1.4",
     "markdownlint-cli": "~0.30.0",
     "mocha": "~9.1.3",
     "npm-run-all": "~4.1.5",
