--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ldapts",
-  "version": "3.2.4",
+  "version": "4.0.0",
   "description": "LDAP client",
   "main": "index.js",
   "types": "index.d.ts",
@@ -33,7 +33,7 @@
     "url": "git+https://github.com/ldapts/ldapts.git"
   },
   "engines": {
-    "node": ">=12"
+    "node": ">=14"
   },
   "keywords": [
     "ldap",
@@ -48,7 +48,7 @@
   "homepage": "https://github.com/ldapts/ldapts#readme",
   "dependencies": {
     "@types/asn1": ">=0.2.0",
-    "@types/node": ">=12.13",
+    "@types/node": ">=14",
     "@types/uuid": ">=8",
     "asn1": "~0.2.6",
     "debug": "~4.3.4",
@@ -56,35 +56,35 @@
     "uuid": "~8.3.2"
   },
   "devDependencies": {
-    "@types/chai": "~4.3.0",
+    "@types/chai": "~4.3.1",
     "@types/chai-as-promised": "~7.1.5",
     "@types/debug": "~4.1.7",
-    "@types/mocha": "~9.1.0",
+    "@types/mocha": "~9.1.1",
     "@types/sinon": "~10.0.11",
-    "@typescript-eslint/eslint-plugin": "~5.19.0",
-    "@typescript-eslint/parser": "~5.19.0",
+    "@typescript-eslint/eslint-plugin": "~5.26.0",
+    "@typescript-eslint/parser": "~5.26.0",
     "chai": "~4.3.6",
     "chai-as-promised": "~7.1.1",
-    "eslint": "~8.13.0",
+    "eslint": "~8.16.0",
     "eslint-config-airbnb-base": "~15.0.0",
     "eslint-config-airbnb-typescript": "~17.0.0",
     "eslint-config-prettier": "~8.5.0",
     "eslint-plugin-import": "~2.26.0",
-    "eslint-plugin-jsdoc": "~39.2.1",
-    "eslint-plugin-mocha": "~10.0.3",
+    "eslint-plugin-jsdoc": "~39.3.0",
+    "eslint-plugin-mocha": "10.0.3",
     "eslint-plugin-prettier": "~4.0.0",
     "eslint-plugin-promise": "~6.0.0",
-    "eslint-plugin-security": "~1.4.0",
-    "husky": "~7.0.4",
-    "lint-staged": "~12.3.7",
+    "eslint-plugin-security": "~1.5.0",
+    "husky": "~8.0.1",
+    "lint-staged": "~12.4.1",
     "markdownlint-cli": "~0.31.1",
-    "mocha": "~9.2.2",
+    "mocha": "~10.0.0",
     "npm-run-all": "~4.1.5",
     "pinst": "~3.0.0",
     "prettier": "~2.6.2",
-    "sinon": "~13.0.1",
+    "sinon": "~14.0.0",
     "ts-mockito": "~2.6.1",
-    "ts-node": "~10.7.0",
-    "typescript": "~4.6.3"
+    "ts-node": "~10.8.0",
+    "typescript": "~4.6.4"
   }
 }
