--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "noPropertyAccessFromIndexSignature": true,
+    "noUncheckedIndexedAccess": true,
 
     "paths": {
       "*": [
