Fix parsing specified controls from response.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ldapts",
-  "version": "4.2.2",
+  "version": "4.3.0-beta1",
   "description": "LDAP client",
   "main": "index.js",
   "types": "index.d.ts",
@@ -11,7 +11,8 @@
     "lint:code": "eslint --fix --ext .ts src tests",
     "lint": "run-p lint:*",
     "lint-staged": "lint-staged",
-    "dist": "if [ -d \"src\" ]; then rm -rf dist && npm run lint && npm run build && npm run test && cp package.json dist && cp package-lock.json dist && cp *.md dist && cp .npmignore dist && cd dist && npm publish; fi",
+    "dist": "if [ -d \"src\" ]; then rm -rf dist && npm run lint && npm run build && npm run test && cp package.json dist && cp package-lock.json dist && cp *.md dist && cp LICENSE dist && cp .npmignore dist && cd dist && npm publish; fi",
+    "beta": "if [ -d \"src\" ]; then rm -rf dist && npm run lint && npm run build && npm run test && cp package.json dist && cp package-lock.json dist && cp *.md dist && cp LICENSE dist && cp .npmignore dist && cd dist && npm publish --tag beta; fi",
     "prepublishOnly": "if [ -d \"src\" ]; then echo \"Please use: npm run dist\" && exit 125; fi && pinst --disable",
     "postinstall": "husky install",
     "postpublish": "pinst --enable"
@@ -61,22 +62,22 @@
     "@types/debug": "~4.1.7",
     "@types/mocha": "~10.0.1",
     "@types/sinon": "~10.0.13",
-    "@typescript-eslint/eslint-plugin": "~5.51.0",
-    "@typescript-eslint/parser": "~5.51.0",
+    "@typescript-eslint/eslint-plugin": "~5.52.0",
+    "@typescript-eslint/parser": "~5.52.0",
     "chai": "~4.3.7",
     "chai-as-promised": "~7.1.1",
-    "eslint": "~8.33.0",
+    "eslint": "~8.34.0",
     "eslint-config-airbnb-base": "~15.0.0",
     "eslint-config-airbnb-typescript": "~17.0.0",
     "eslint-config-prettier": "~8.6.0",
     "eslint-plugin-import": "~2.27.5",
-    "eslint-plugin-jsdoc": "~39.8.0",
+    "eslint-plugin-jsdoc": "~40.0.0",
     "eslint-plugin-mocha": "10.1.0",
     "eslint-plugin-prettier": "~4.2.1",
     "eslint-plugin-promise": "~6.1.1",
     "eslint-plugin-security": "~1.7.1",
     "husky": "~8.0.3",
-    "lint-staged": "~13.1.1",
+    "lint-staged": "~13.1.2",
     "markdownlint-cli": "~0.33.0",
     "mocha": "~10.2.0",
     "npm-run-all": "~4.1.5",
