--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,4 @@ services:
       - LDAP_TLS_CA_FILE=/certs/client-ca.pem
       - LDAP_TLS_VERIFY_CLIENTS=allow
     volumes:
-      - ${LDAP_CERTS_DIR:-./dist/test-data/certs}:/certs:ro
+      - ${LDAP_CERTS_DIR:-./tests/certs}:/certs:ro
