--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: ['14', '16', '18']
+        node-version: ['16', '18', '20']
 
     steps:
     - uses: actions/checkout@v3
@@ -23,8 +23,20 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
 
+    - name: Install certyaml
+      run: go install github.com/tsaarni/certyaml/cmd/certyaml@v0.9.2
+    - name: Create certs
+      run: ~/go/bin/certyaml
+      working-directory: ./tests/certs
+    - name: Start openldap container
+      run: docker-compose up -d &
+    - name: Sleep
+      run: sleep 60
+
     - run: npm ci
     - run: npm run build
     - run: npm test
       env:
         CI: true
+    - name: Stopping openldap container
+      run: docker-compose down
