--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ldapts",
-  "version": "7.0.8",
+  "version": "7.0.9",
   "description": "LDAP client",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
@@ -35,7 +35,7 @@
     "beta": "npm publish --tag beta",
     "prepublishOnly": "npm run lint && npm run build && npm run test && pinst --disable",
     "postpublish": "pinst --enable",
-    "postinstall": "husky install"
+    "prepare": "husky"
   },
   "lint-staged": {
     "*.md": [
@@ -81,28 +81,28 @@
     "@types/debug": "~4.1.12",
     "@types/mocha": "~10.0.6",
     "@types/node": ">=18",
-    "@types/sinon": "~17.0.2",
-    "@typescript-eslint/eslint-plugin": "~6.17.0",
-    "@typescript-eslint/parser": "~6.17.0",
-    "chai": "~4.4.0",
+    "@types/sinon": "~17.0.3",
+    "@typescript-eslint/eslint-plugin": "~6.21.0",
+    "@typescript-eslint/parser": "~6.21.0",
+    "chai": "~4.4.1",
     "chai-as-promised": "~7.1.1",
     "eslint": "~8.56.0",
     "eslint-config-airbnb-base": "~15.0.0",
     "eslint-config-airbnb-typescript": "~17.1.0",
     "eslint-config-prettier": "~9.1.0",
     "eslint-plugin-import": "~2.29.1",
-    "eslint-plugin-jsdoc": "~48.0.2",
+    "eslint-plugin-jsdoc": "~48.0.6",
     "eslint-plugin-mocha": "10.2.0",
-    "eslint-plugin-prettier": "~5.1.2",
+    "eslint-plugin-prettier": "~5.1.3",
     "eslint-plugin-promise": "~6.1.1",
     "eslint-plugin-security": "~2.1.0",
-    "husky": "~8.0.3",
-    "lint-staged": "~15.2.0",
-    "markdownlint-cli": "~0.38.0",
+    "husky": "~9.0.10",
+    "lint-staged": "~15.2.2",
+    "markdownlint-cli": "~0.39.0",
     "mocha": "~10.2.0",
     "npm-run-all": "~4.1.5",
     "pinst": "~3.0.0",
-    "prettier": "~3.1.1",
+    "prettier": "~3.2.5",
     "sinon": "~17.0.1",
     "ts-mockito": "~2.6.1",
     "tsx": "~4.7.0",
