--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ldapts",
-  "version": "7.0.12",
+  "version": "7.0.13",
   "description": "LDAP client",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
@@ -69,44 +69,35 @@
   "homepage": "https://github.com/ldapts/ldapts#readme",
   "dependencies": {
     "@types/asn1": ">=0.2.4",
-    "@types/uuid": ">=9",
     "asn1": "~0.2.6",
-    "debug": "~4.3.4",
+    "debug": "~4.3.5",
     "strict-event-emitter-types": "~2.0.0",
-    "uuid": "~9.0.1"
+    "uuid": "~10.0.0"
   },
   "devDependencies": {
     "@types/chai": "~4.3.16",
     "@types/chai-as-promised": "~7.1.8",
     "@types/debug": "~4.1.12",
-    "@types/mocha": "~10.0.6",
+    "@types/mocha": "~10.0.7",
     "@types/node": ">=20",
     "@types/sinon": "~17.0.3",
-    "@typescript-eslint/eslint-plugin": "~7.9.0",
-    "@typescript-eslint/parser": "~7.9.0",
-    "chai": "~4.4.1",
-    "chai-as-promised": "~7.1.2",
-    "eslint": "~8.57.0",
-    "eslint-config-airbnb-base": "~15.0.0",
-    "eslint-config-airbnb-typescript": "~18.0.0",
-    "eslint-config-prettier": "~9.1.0",
-    "eslint-plugin-import": "~2.29.1",
-    "eslint-plugin-jsdoc": "~48.2.4",
-    "eslint-plugin-mocha": "10.4.3",
-    "eslint-plugin-prettier": "~5.1.3",
-    "eslint-plugin-promise": "~6.1.1",
-    "eslint-plugin-security": "~3.0.0",
+    "@types/uuid": ">=10",
+    "chai": "~5.1.1",
+    "chai-as-promised": "~8.0.0",
+    "eslint": "~9.6.0",
+    "eslint-config-decent": "^1.2.9",
     "husky": "~9.0.11",
-    "lint-staged": "~15.2.2",
-    "markdownlint-cli": "~0.40.0",
-    "mocha": "~10.4.0",
+    "lint-staged": "~15.2.7",
+    "markdownlint-cli": "~0.41.0",
+    "mocha": "~10.6.0",
     "npm-run-all": "~4.1.5",
     "pinst": "~3.0.0",
-    "prettier": "~3.2.5",
-    "sinon": "~17.0.1",
+    "prettier": "~3.3.2",
+    "sinon": "~18.0.0",
     "ts-mockito": "~2.6.1",
-    "tsx": "~4.10.2",
-    "typescript": "~5.4.5",
+    "tsx": "~4.16.2",
+    "typescript": "~5.5.3",
+    "typescript-eslint": "~8.0.0-alpha.41",
     "unbuild": "2.0.0"
   }
 }
