Fix lint issues related to moving to flat config

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ldapts",
-  "version": "7.0.13",
+  "version": "7.1.0",
   "description": "LDAP client",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
@@ -27,7 +27,7 @@
     "test": "npm run test:types && mocha \"tests/**/*.tests.ts\"",
     "test:types": "tsc --noEmit --skipLibCheck",
     "lint:markdown": "prettier --write '*.md' '!(node_modules|dist)/**/*.md' && markdownlint '*.md' '!(node_modules|dist)/**/*.md' --config=.github/linters/.markdown-lint.yml --fix",
-    "lint:code": "eslint --fix --ext .ts src tests",
+    "lint:code": "eslint --fix",
     "lint": "run-p lint:*",
     "lint-staged": "lint-staged",
     "docker:up": "docker-compose up -d",
@@ -85,7 +85,7 @@
     "chai": "~5.1.1",
     "chai-as-promised": "~8.0.0",
     "eslint": "~9.6.0",
-    "eslint-config-decent": "^1.2.9",
+    "eslint-config-decent": "^1.3.0",
     "husky": "~9.0.11",
     "lint-staged": "~15.2.7",
     "markdownlint-cli": "~0.41.0",
