--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ldapts",
-  "version": "7.1.0",
+  "version": "7.1.1",
   "description": "LDAP client",
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
@@ -70,34 +70,35 @@
   "dependencies": {
     "@types/asn1": ">=0.2.4",
     "asn1": "~0.2.6",
-    "debug": "~4.3.5",
+    "debug": "~4.3.6",
     "strict-event-emitter-types": "~2.0.0",
-    "uuid": "~10.0.0"
+    "uuid": "~10.0.0",
+    "whatwg-url": "~14.0.0"
   },
   "devDependencies": {
-    "@types/chai": "~4.3.16",
+    "@types/chai": "~4.3.18",
     "@types/chai-as-promised": "~7.1.8",
     "@types/debug": "~4.1.12",
     "@types/mocha": "~10.0.7",
-    "@types/node": ">=20",
+    "@types/node": ">=22",
     "@types/sinon": "~17.0.3",
     "@types/uuid": ">=10",
+    "@types/whatwg-url": "~11.0.5",
     "chai": "~5.1.1",
     "chai-as-promised": "~8.0.0",
-    "eslint": "~9.6.0",
-    "eslint-config-decent": "^1.3.0",
-    "husky": "~9.0.11",
-    "lint-staged": "~15.2.7",
+    "eslint": "~9.9.1",
+    "eslint-config-decent": "^2.2.0",
+    "husky": "~9.1.5",
+    "lint-staged": "~15.2.9",
     "markdownlint-cli": "~0.41.0",
-    "mocha": "~10.6.0",
+    "mocha": "~10.7.3",
     "npm-run-all": "~4.1.5",
     "pinst": "~3.0.0",
-    "prettier": "~3.3.2",
+    "prettier": "~3.3.3",
     "sinon": "~18.0.0",
     "ts-mockito": "~2.6.1",
-    "tsx": "~4.16.2",
-    "typescript": "~5.5.3",
-    "typescript-eslint": "~8.0.0-alpha.41",
+    "tsx": "~4.18.0",
+    "typescript": "~5.5.4",
     "unbuild": "2.0.0"
   }
 }
