test: force EdDSA key generation
certyaml default key type works on windows but somehow does not work in linux

--- a/tests/data/certs/certs.yaml
+++ b/tests/data/certs/certs.yaml
@@ -1,12 +1,16 @@
 subject: cn=server-ca
+key_type: ED25519
 ---
 subject: cn=client-ca
+key_type: ED25519
 ---
 subject: cn=server
 issuer: cn=server-ca
+key_type: ED25519
 sans:
 - DNS:localhost
 - DNS:ldap.local
 ---
 subject: cn=user
 issuer: cn=client-ca
+key_type: ED25519
