--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,8 +26,8 @@ jobs:
     - name: Install certyaml
       run: go install github.com/tsaarni/certyaml/cmd/certyaml@v0.9.2
     - name: Create certs
-      run: ~/go/bin/certyaml
-      working-directory: ./tests/data/certs
+      run: ~/go/bin/certyaml -d ./certs
+      working-directory: ./tests/data
     - name: Start openldap container
       run: docker compose up -d --wait
 
