ci: use RSA keys as ED25519 keys are not supported below node22

--- a/tests/data/certs.yaml
+++ b/tests/data/certs.yaml
@@ -1,16 +1,16 @@
 subject: cn=server-ca
-key_type: ED25519
+key_type: RSA
 ---
 subject: cn=client-ca
-key_type: ED25519
+key_type: RSA
 ---
 subject: cn=server
 issuer: cn=server-ca
-key_type: ED25519
+key_type: RSA
 sans:
 - DNS:localhost
 - DNS:ldap.local
 ---
 subject: cn=user
 issuer: cn=client-ca
-key_type: ED25519
+key_type: RSA
