--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "lint-staged": "~15.4.3",
     "markdownlint-cli": "~0.44.0",
     "mocha": "~11.1.0",
+    "node-forge": "^1.3.1",
     "npm-run-all": "~4.1.5",
     "pinst": "~3.0.0",
     "prettier": "~3.5.3",
