--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "docker:up": "docker compose up -d --wait",
     "docker:down": "docker compose down",
     "beta": "npm publish --tag beta",
-    "prepublishOnly": "npm run lint && npm run build && npm run test && pinst --disable",
+    "prepublishOnly": "pinst --disable",
     "postpublish": "pinst --enable",
     "prepare": "husky"
   },
