chore: Add semantic release packages

--- a/package.json
+++ b/package.json
@@ -76,6 +76,12 @@
     "whatwg-url": "14.2.0"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "6.0.3",
+    "@semantic-release/commit-analyzer": "13.0.1",
+    "@semantic-release/git": "10.0.1",
+    "@semantic-release/github": "11.0.1",
+    "@semantic-release/npm": "12.0.1",
+    "@semantic-release/release-notes-generator": "14.0.3",
     "@types/chai": "5.2.1",
     "@types/chai-as-promised": "8.0.2",
     "@types/debug": "4.1.12",
@@ -95,6 +101,7 @@
     "npm-run-all2": "7.0.2",
     "pinst": "3.0.0",
     "prettier": "3.5.3",
+    "semantic-release": "24.2.3",
     "sinon": "20.0.0",
     "ts-mockito": "2.6.1",
     "tsx": "4.19.3",
