feat!: remove Node.js v18 support (#203)
* feat!: remove Node.js v18 support

BREAKING CHANGE: Drop support for Node.js v18. Minimum required version is now Node.js v20.

- Updated engines field in package.json
- Updated CI configuration to test on supported versions only

* Run CI jobs for PRs targeting main

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
       - 'main'
       - 'issue-**'
 
+  pull_request:
+    branches: ['main']
+
 permissions:
   contents: read
 
@@ -17,7 +20,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: ['18', '20', '22']
+        node-version: ['20', '22']
 
     steps:
       - uses: actions/checkout@v4
