--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -23,10 +23,12 @@
       matchDepTypes: ['devDependencies'],
       schedule: ['* 0-4,22-23 * * 1-5', '* * * * 0,6'],
       groupName: 'dev dependencies',
+      semanticCommitType: 'chore',
     },
     {
       matchDepTypes: ['dependencies'],
       groupName: 'all dependencies',
+      semanticCommitType: 'fix',
     },
   ],
 }
