chore: Replace mocha with vitest

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   ],
   "scripts": {
     "build": "unbuild",
-    "test": "npm run test:types && mocha \"tests/**/*.tests.ts\"",
+    "test": "npm run test:types && vitest run",
     "test:types": "tsc --noEmit --skipLibCheck",
     "test:imports": "node --no-experimental-require-module tests/import.tests.cjs && node tests/import.tests.mjs",
     "lint:markdown": "prettier --write '*.md' '!(node_modules|dist)/**/*.md' && markdownlint '*.md' '!(node_modules|dist)/**/*.md' --config=.github/linters/.markdown-lint.yml --fix",
@@ -78,28 +78,19 @@
     "@semantic-release/github": "12.0.6",
     "@semantic-release/npm": "13.1.4",
     "@semantic-release/release-notes-generator": "14.1.0",
-    "@types/chai": "5.2.3",
-    "@types/chai-as-promised": "8.0.2",
-    "@types/mocha": "10.0.10",
     "@types/node": ">=20",
-    "@types/sinon": "21.0.0",
-    "chai": "6.2.2",
-    "chai-as-promised": "8.0.2",
-    "eslint": "10.0.0",
-    "eslint-config-decent": "3.1.124",
+    "eslint": "10.0.2",
+    "eslint-config-decent": "4.0.0",
     "husky": "9.1.7",
     "lint-staged": "16.2.7",
     "markdownlint-cli": "0.47.0",
-    "mocha": "11.7.5",
     "node-forge": "1.3.3",
     "npm-run-all2": "8.0.4",
     "pinst": "3.0.0",
     "prettier": "3.8.1",
     "semantic-release": "25.0.3",
-    "sinon": "21.0.1",
-    "ts-mockito": "2.6.1",
-    "tsx": "4.21.0",
     "typescript": "5.9.3",
-    "unbuild": "3.6.1"
+    "unbuild": "3.6.1",
+    "vitest": "3.1.1"
   }
 }
