--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
   },
   "include": [
     "src/**/*",
-    "tests/**/*"
+    "tests/**/*",
+    "vitest.config.ts"
   ],
   "exclude": [
     "node_modules",
